<resources>
    <string name="app_name">El Dokan</string>
    <string name="facebook_app_id">537112297134777</string>
    <string name="default_notification_channel_id">El Dokan</string>
    <string name="fb_login_protocol_scheme">fb537112297134777</string>
    <string name="press_once_again_to_exit">Press once again to exit</string>
    <string name="ok">OK</string>
    <string name="loading">Loading</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="mypurchase">My Purchases</string>
    <string name="checkoutorder">Check out Orders</string>
    <string name="manageorder">Manage Orders</string>
    <string name="returnandrefund">Return / Refund Order</string>
    <string name="purchasedHistory">Purchases History</string>
    <string name="itemFeedback">Item Feedback</string>
    <string name="myprofile">My Profile</string>
    <string name="setting">Settings</string>
    <string name="selectall">Select All</string>
    <string name="subtotal">Sub Total</string>
    <string name="stockLabel">In Stock</string>
    <string name="unable_to_fetch_image">Unable To Fetch Image</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="empty_user_search_message">No Products found</string>
    <string name="Search">Search</string>
    <string name="collapse_text_label">Show Less</string>
    <string name="expand_text_label">Show More</string>
    <string name="just_now">Just Now</string>
    <string name="min_ago">a min ago</string>
    <string name="minites_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="yesterday">yesterday</string>
    <string name="today">Today</string>
    <string name="comment_count">0 Comments</string>
    <string name="likes_count">0 Likes</string>
    <string name="reply">Reply</string>
    <string name="like_btn">Like</string>
    <string name="post_image_transition_name" translatable="false">post_image_transition</string>
    <string name="duration_minutes_shortest">%1$d m</string>
    <string name="duration_hours_shortest">%1$d h</string>
    <string name="duration_days_shortest">%1$d d</string>
    <string name="duration_week_shortest">%1$d w</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments :</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="comment_text_hint">Enter your comment …</string>
    <string name="send_comment_button_label">Send</string>
    <string name="Cafe">Cafe</string>
    <string name="Resturant">Resturant</string>
    <string name="grocery">Grocery</string>
    <string name="clothes">Clothing Shop</string>
    <string name="electronic">Electronic Shop</string>
    <string name="pharamacy">Pharamacy</string>
    <string name="houseware">Houseware</string>
    <string name="beauty">Beauty Shop</string>
    <string name="taxi">Taxi</string>
    <string name="mix">Mix</string>
    <string name="we_are">We are best at</string>
    <string name="store_name">Store Name</string>
    <string name="desc">Description</string>
    <string name="Time">20 - 40 Min</string>
    <string name="speed">Fast</string>
    <string name="Delivery_Cost">Delivery : 5 LE</string>
    <string name="Delivery_Time">20 - 40 mins</string>
    <string name="currency">LE</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="Trader_Name">Mohamed El Sayed</string>
    <string name="Trader_Name_Full">Mohamed El Sayed - Toukh</string>
    <string name="Trader_Desc">Pizza , Burger</string>
    <string name="search">Search</string>
    <string name="shop_menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="activity_add_Catagories_to_Menu">Added Categories</string>
    <string name="add_members_activity_catagories">categoriest is not present in the list</string>
    <string name="create_your_online_shop">Create Online Shop</string>
    <string name="quantity_label">Quantity</string>
    <string name="default_product_quantity">1</string>
    <string name="remove_button">Remove</string>
    <string name="lbl_view_cart">VIEW CART</string>
    <string name="cart_info_bar_data">%d Items | ₹%s</string>
    <string name="price_with_currency">₹%.2f</string>
    <string name="lbl_item_price_quantity">%s x %d</string>
    <string name="btn_checkout">CHECKOUT (%s)</string>
    <string name="lbl_your_cart">Your Cart</string>
    <string name="btn_Proceed">PROCEED (%s)</string>
    <string name="buy">Buy</string>
    <string name="size_select">Please Select Size</string>
    <string name="add_success">Successfully Added</string>
    <string name="sell_used_items">Sell Used Items</string>
    <string name="publish_an_AD">Publish Ad For</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear All</string>
    <string name="apply">Apply</string>
    <string name="shops">Shops</string>
    <string name="example">Example</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="Loading">Loading</string>
    <string name="my_orders">My Orders</string>
    <string name="products">Products</string>
    <string name="dashboard">Dashboard</string>
    <string name="thanks_for_shopping_with_us">Thanks for shopping with us!</string>
    <string name="your_order_number">Your order number is</string>
    <string name="view_order_details">View order details</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="something_happened">Something happened…</string>
    <string name="your_purchase_could_not_be_completed">Your purchase couldn\\\'t be completed</string>
    <string name="try_again">Try Again</string>
    <string name="back_to_shop">Back To Shop</string>
    <string name="best_value">Best Value</string>
    <string name="wish_list">My Wishlist</string>
    <string name="track_orders">Track Orders</string>
    <string name="Products_Managment">Products Managment</string>
    <string name="view_charts">View Charts</string>
    <string name="customer_service">Customer Service</string>
    <string name="send_notification">Send Notification</string>
    <string name="traders_managment">Trader Management</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="electronic_top_picks">Electronics Top Picks</string>
    <string name="clothes_top_picks">Fashion Top Picks</string>
    <string name="market_top_picks">Market Top Picks</string>
    <string name="shop_now">Shop Now</string>
    <string name="offer_details">Offer Details</string>
    <string name="sold_by">Sold by</string>
    <string name="enjoy_hassle_free_returns_with_this_offer">Enjoy hassle free returns with this offer</string>
    <string name="seller_note">Seller note</string>
    <string name="country_of_origin_egypt">Country of Origin : Egypt</string>
    <string name="all_prices_include_vat">All prices include VAT</string>
    <string name="resturant">Resturant</string>
    <string name="others">Others</string>
    <string name="cafe">Cafe</string>
    <string name="department">Department</string>
    <string name="occasion">Occasion</string>
    <string name="material">Material</string>
    <string name="displaytype">Displaytype</string>
    <string name="screen_size">Screen Size</string>
    <string name="camera_resolution">Camera Resolution</string>
    <string name="momery_size">Momery Size</string>
    <string name="storage">Storage</string>
    <string name="processor">Processor Type</string>
    <string name="gpu">Graphics Card</string>
    <string name="up_to_80_off">Up to 80% OFF</string>
    <string name="up_to_75_off">Up to 75% OFF</string>
    <string name="up_to_50_off">Up to 50% OFF</string>
    <string name="up_to_70_off">Up to 70% OFF</string>
    <string name="up_to_90_off">Up to 90% OFF</string>
    <string name="laptops">Laptops</string>
    <string name="mobiles">Mobiles</string>
    <string name="men_fashion">Fashion For Him</string>
    <string name="women_fashion">Fashion For Her</string>
    <string name="tv">Televisions</string>
    <string name="foods">Foods</string>
    <string name="eldokan_market">El Dokan Market</string>
    <string name="cleaning">Cleaning</string>
    <string name="baby">Baby</string>
    <string name="market">Market</string>
    <string name="accessories">Accessories</string>
    <string name="health"><![CDATA[Health & Beauty]]></string>
    <string name="beauty_s">Beauty</string>
    <string name="cart_is_empty">Your Cart is Empty</string>
    <string name="total_n_of_items">Total No. of Items :</string>
    <string name="view_cart">View Cart</string>
    <string name="total_ammont">Total Amount :</string>
    <string name="shoes_boots"><![CDATA[Shoes & Boots]]></string>
    <string name="jacket_coats"><![CDATA[Jacket & Coats]]></string>
    <string name="tops_hoodies"><![CDATA[Tops & Hoodies]]></string>
    <string name="tops_hoobies"><![CDATA[Tops & Hoodies]]></string>
    <string name="watches">Watches</string>
    <string name="pant_denim"><![CDATA[Pants & Denim]]></string>
    <string name="luggage">Luggage</string>
    <string name="eyewear">Eyewear</string>
    <string name="baby_clothes">Baby Clothes</string>
    <string name="baby_shoes">Baby Shoes</string>
    <string name="kid_clothes">Kid Clothes</string>
    <string name="smart_phones">Smart Phones</string>
    <string name="tablets">Tablets</string>
    <string name="mobile_accessories">Mobile Accessories</string>
    <string name="television">Televisions</string>
    <string name="laptop_desktop"><![CDATA[Laptop & Desktops]]></string>
    <string name="monitors">Monitors</string>
    <string name="camera_accessories"><![CDATA[Camera & Accessories]]></string>
    <string name="routers_networking"><![CDATA[Routers & Networking]]></string>
    <string name="headphones_speakers"><![CDATA[Headphones & Speakers]]></string>
    <string name="drivers_storage"><![CDATA[Drivers & Storage]]></string>
    <string name="gaming_console"><![CDATA[Gaming & Console]]></string>
    <string name="computer_components">Computer Components</string>
    <string name="scanners">Scanners</string>
    <string name="printers">Printers</string>
    <string name="computer_acc">Computer Accessories</string>
    <string name="gaming__console"><![CDATA[Gaming & Console]]></string>
    <string name="pending_message">Your Order waiting for approval</string>
    <string name="total_cost">Total Cost</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_desc">Enter Description</string>
    <string name="enter_disc">Enter Discount (Optional)</string>
    <string name="goverment">Goverment</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="enter_phone">Enter phone Number</string>
    <string name="promate_this_product">Promote This Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="owner_name">Owner Name</string>
    <string name="location">Location</string>
    <string name="phone">Phone Number</string>
    <string name="state">State: "</string>
    <string name="message_info">Message Info</string>
    <string name="order_time">Order Date</string>
</resources>