<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/gradient_background"
    tools:context=".Auth.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="#fff"
                android:textSize="45sp"
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/app_name"
                android:layout_marginBottom="20dp"
                />

            <RelativeLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:padding="10dp">

                <com.mohaa.eldokan.Utils.CircleImageView
                    android:id="@+id/profilepic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp"
                    android:src="@mipmap/ic_profile"/>

                <ImageView
                    android:id="@+id/uploadpic"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:elevation="4dp"
                    android:layout_alignBottom="@+id/profilepic"
                    android:layout_alignRight="@+id/profilepic"
                    android:layout_alignEnd="@+id/profilepic"
                    android:src="@drawable/ic_upload"/>

            </RelativeLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                app:met_iconLeft="@drawable/ic_man"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/white"
                app:met_clearButton="true"
                app:met_primaryColor="@color/white"
                app:met_errorColor="@color/red_600"/>



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:met_iconLeft="@drawable/ic_lock"
                app:met_floatingLabel="highlight"
                android:inputType="textPassword"
                app:met_errorColor="@color/red_600"
                app:met_baseColor="@color/white"
                app:met_primaryColor="@color/white"
                app:met_clearButton="true"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reenter_password"
                app:met_iconLeft="@drawable/ic_lock"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/white"
                app:met_clearButton="true"
                app:met_errorColor="@color/red_600"
                app:met_primaryColor="@color/white"
                android:inputType="textPassword"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                app:met_iconLeft="@drawable/ic_phone"
                app:met_floatingLabel="highlight"
                app:met_baseColor="@color/white"
                app:met_clearButton="true"
                app:met_errorColor="@color/red_600"
                app:met_primaryColor="@color/white"
                android:inputType="number"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/register"
                    android:text="@string/register"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:textSize="15sp" />

            </LinearLayout>




        </LinearLayout>

    </ScrollView>

</RelativeLayout>
